Anchor footer back-zone to bottom of viewport and set as fixed layer behind content

--- a/style.css
+++ b/style.css
@@ -453,11 +453,11 @@ model-viewer::part(default-progress-bar) {
 }
 
 #page .page-back-layer.is-footer {
-    position: relative;
-    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: var(--header-height);
-    clear: both;
 }
 
 /* Basic Table Support */
